Fix word wrapping

--- a/css/roam_basic.css
+++ b/css/roam_basic.css
@@ -85,7 +85,6 @@ pre {
 }
 
 .back-side.list {
-    display: inline-block;
     text-align: left;
 }
 
