--- a/css/roam_cloze.css
+++ b/css/roam_cloze.css
@@ -93,7 +93,6 @@ pre {
 }
 
 .back-side.list {
-    display: inline-block;
     text-align: left;
 }
 
